--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Playfair+Display+SC&display=swap"
       rel="stylesheet"
     />
+
+    <script>
+      document.documentElement.className += " js";
+    </script>
   </head>
   <body>
     <nav class="menu">
@@ -33,7 +37,7 @@
 
     <section class="grid-section animais" id="animais">
       <h1 class="titulo">Animais Fantásticos</h1>
-      <ul class="animais-lista">
+      <ul class="animais-lista js-tabmenu">
         <li>
           <img src="./img/imagem1.jpg" alt="imagem 1" />
         </li>
@@ -59,29 +63,16 @@
         </li>
       </ul>
 
-      <div class="animais-descricao">
+      <div class="animais-descricao js-tabcontent">
         <section>
-          <h2>Raposa</h2>
+          <h2>Luna</h2>
+          
           <p>
-            As raposas são animais mamíferos e onívoros pertencentes à família
-            Canidae. São vulpídeos de porte médio, caracterizado por um focinho
-            comprido e uma causa longa e peluda.
+            A gata mais linda que alguém pode ter, esta com certeza é uma fera, uma pantera que vive nas profundezas da selva doméstica chamada casa, o espírito livre de uma fera com seu desejo insaciável de caçar e dormir altas horas do dia.
           </p>
 
           <p>
-            Também apresentam como particularidade suas pupilas ovais,
-            semelhantes às pupilas verticais dos felídeos.
-          </p>
-
-          <p>
-            De cerca de 40 espécies reconhecidas como raposas, somente 12
-            pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a
-            raposa vermelha é a mais comum.
-          </p>
-
-          <p>
-            Também apresentam como particularidade suas pupilas ovais,
-            semelhantes às pupilas verticais dos felídeos.
+            Uma das coisas que ela mais gosta é de carinho na barriga, mas também ao mesmo tempo que gosta de carinho na barriga, ela vive sempre penteando seus pelos onde nós tocamos, para manter sua beleza divina de uma gata organizada, limpa e charmosa.
           </p>
         </section>
 
