modificações na lista de detalhes, animações criadas e modificação de endereço com adicional de localização de mapa

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <section class="grid-section faq" id="faq">
       <h1 class="titulo">FAQ</h1>
 
-      <dl class="faq-lista">
+      <dl class="faq-lista js-accordion">
         <dt>Qual a idade dos animais?</dt>
         <dd>
           As raposas são animais mamíferos e onívoros pertencentes à família
@@ -243,9 +243,9 @@
 
       <ul class="dados">
         <li>animaisfantasticos@contato.com</li>
-        <li>+55 (81) 9999-9999</li>
-        <li>Rua do Conde, n° 21</li>
-        <li>Recife - PE</li>
+        <li>+55 (41) 9999-9999</li>
+        <li>Rua das Flores, n° 21</li>
+        <li>Paraná - PR</li>
       </ul>
     </section>
 
