animações de scroll adicionadas

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </ul>
     </nav>
 
-    <section class="grid-section animais" id="animais">
+    <section class="grid-section animais js-scroll" id="animais">
       <h1 class="titulo">Animais Fantásticos</h1>
       <ul class="animais-lista js-tabmenu">
         <li>
@@ -66,13 +66,19 @@
       <div class="animais-descricao js-tabcontent">
         <section>
           <h2>Luna</h2>
-          
+
           <p>
-            A gata mais linda que alguém pode ter, esta com certeza é uma fera, uma pantera que vive nas profundezas da selva doméstica chamada casa, o espírito livre de uma fera com seu desejo insaciável de caçar e dormir altas horas do dia.
+            A gata mais linda que alguém pode ter, esta com certeza é uma fera,
+            uma pantera que vive nas profundezas da selva doméstica chamada
+            casa, o espírito livre de uma fera com seu desejo insaciável de
+            caçar e dormir altas horas do dia.
           </p>
 
           <p>
-            Uma das coisas que ela mais gosta é de carinho na barriga, mas também ao mesmo tempo que gosta de carinho na barriga, ela vive sempre penteando seus pelos onde nós tocamos, para manter sua beleza divina de uma gata organizada, limpa e charmosa.
+            Uma das coisas que ela mais gosta é de carinho na barriga, mas
+            também ao mesmo tempo que gosta de carinho na barriga, ela vive
+            sempre penteando seus pelos onde nós tocamos, para manter sua beleza
+            divina de uma gata organizada, limpa e charmosa.
           </p>
         </section>
 
@@ -203,7 +209,7 @@
       </div>
     </section>
 
-    <section class="grid-section faq" id="faq">
+    <section class="grid-section faq js-scroll" id="faq">
       <h1 class="titulo">FAQ</h1>
 
       <dl class="faq-lista js-accordion">
@@ -235,7 +241,7 @@
       </dl>
     </section>
 
-    <section class="grid-section contato" id="contato">
+    <section class="grid-section contato js-scroll" id="contato">
       <h1 class="titulo">Contato</h1>
       <div class="mapa">
         <img src="./img/mapa.png" alt="mapa" />
